app-heml/firefly/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-service
spec:
  selector:
    app: firefly
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
