app-heml/firefly/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-ingress
spec:
  rules:
    - host: firefly.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-service
                port:
                  number: 80
